logs/Slang/generated/keywords/5.6.2--keyword_trior.sv.log
name: trior
description: The 'trior' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_trior.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_trior.sv:8:8: error: expected declarator
    bit trior;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_trior.sv:8:14: error: expected declarator
    bit trior;
             ^
